syntax = "proto3";
package message;

message Response {
    uint32 code = 1;
}

message HealthcheckMessage {}